Fix last remaining responsive bugs

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 <section id="hero" class="position-relative">
     <img src="img/conan-cubes.svg" class="d-none d-lg-block position-absolute hero-bg" alt="Conan C++ Package Manager"/>
 
-    <a href="#mktoForm_1479" class="btn conan-blue-gradient-bg position-fixed get-involved-btn pl-3 pr-3">Get involved</a>
+    <a href="#mktoForm_1479" class="btn conan-blue-gradient-bg position-fixed get-involved-btn pl-3 pr-3 d-none d-lg-block">Get involved</a>
 
     <div class="container py-5">
         <div class="row d-flex justify-content-center">
@@ -91,7 +91,7 @@
 <section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
     <div class="container">
         <div class="row p-2 d-flex justify-content-around align-items-center">
-            <div class="d-none d-sm-inline">
+            <div class="d-none d-md-inline">
                 <img src="img/sparks_left.svg">
             </div>
             <div class="col-auto text-center text-white">
@@ -111,7 +111,7 @@
                     </a>
                 </div>
             </div>
-            <div class="d-none d-sm-inline">
+            <div class="d-none d-md-inline">
                 <img src="img/sparks_right.svg">
             </div>
         </div>
@@ -119,13 +119,13 @@
 </section>
 
 <!-- ADVANTAGES -->
-<section class="advantages py-0 pt-md-5" id="advantages">
-    <div class="container py-0 pt-md-5">
+<section class="advantages py-0 pt-5" id="advantages">
+    <div class="container py-0 pt-5">
 
-        <div class="row d-flex justify-content-center align-items-stretch">
+        <div class="row justify-content-center">
 
             <!-- ONE ADVANTAGE -->
-            <div class="col-md-3 py-5 py-md-0 flex-fill">
+            <div class="col-lg-3 pb-3 pb-md-1 pb-lg-0">
                 <div class="advantage text-center black text-center conan-card">
                     <h4 class="mt-3 text-left font-weight-bold">Conan is universal and portable.</h4>
                     <div class="advantage-text text-left pb-2">
@@ -142,7 +142,7 @@
             </div>
 
             <!-- ONE ADVANTAGE -->
-            <div class="col-md-3 py-5 py-md-0 flex-fill">
+            <div class="col-lg-3  pb-3 pb-md-1 pb-lg-0">
                 <div class="advantage text-center black text-center conan-card">
                     <h4 class="mt-3 text-left font-weight-bold">Conan is open source and completely free.</h4>
                     <div class="advantage-text text-left pb-2">
@@ -159,7 +159,7 @@
 
 
             <!-- ONE ADVANTAGE -->
-            <div class="col-md-3 py-5 py-md-0 flex-fill">
+            <div class="col-lg-3  pb-3 pb-md-1 pb-lg-0">
                 <div class="advantage text-center black text-center conan-card">
                     <h4 class="mt-3 text-left font-weight-bold">Conan can manage any number of different binaries.</h4>
                     <div class="advantage-text text-left pb-2">
@@ -243,23 +243,44 @@
 <!-- TRIBE -->
 <section id="homeBanner" class="home-banner text-black">
     <div class="container py-4">
-        <div class="row d-inline d-md-none">
-            <div class="col-12">
+        <div class="row d-inline d-lg-none">
+            <div class="col-12 d-flex justify-content-center">
                 <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
             </div>
         </div>
-        <div class="row d-flex justify-content-around">
-            <div class="col-4 d-none d-md-inline">
-                <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
-            </div>
-            <div class="col-5">
+        <div class="row d-inline d-lg-none">
+            <div class="col-12 d-flex justify-content-center">
                 <h2 class="text-uppercase text-center text-lg-left">Meet the CONAN 2.0&nbsp;TRIBE</h2>
-                <p class="mb-0 pb-3 text-center text-lg-left">
+            </div>
+        </div>
+        <div class="row d-inline d-lg-none">
+            <div class="col-12 d-flex justify-content-center">
+                <p class="mb-0 pb-3 text-center">
                     A group of more than 70 Conan expert users and contributors that helped to define Conan 2.0.
                 </p>
+            </div>
+        </div>
+        <div class="row d-inline d-lg-none">
+            <div class="col-12 d-flex justify-content-center">
                 <a href="tribe.html" class="btn conan-blue-gradient-bg">
                     Learn more
                 </a>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-around">
+            <div class="col-4 d-none d-lg-inline">
+                <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
+            </div>
+            <div class="col-5 d-none d-lg-inline">
+                <h2 class="text-uppercase text-center text-lg-left">Meet the CONAN 2.0&nbsp;TRIBE</h2>
+                <p class="mb-0 pb-3 text-left">
+                    A group of more than 70 Conan expert users and contributors that helped to define Conan 2.0.
+                </p>
+                <div class="d-lg-block d-flex justify-content-center">
+                    <a href="tribe.html" class="btn conan-blue-gradient-bg">
+                        Learn more
+                    </a>
+                </div>
             </div>
         </div>
     </div>
