Fix responsivenes errors

--- a/src/faq.html
+++ b/src/faq.html
@@ -14,7 +14,7 @@
   >
   <link href="favicon.png" rel="shortcut icon" type="image/png" />
   <link href="https://conan.io/faq.html" hreflang="en" rel="alternate" />
-  <title>Conan, C and C++ Open Source Package Manager</title>
+  <title>Conan - C and C++ Open Source Package Manager</title>
 
   <link rel="canonical" href="https://conan.io/faq.html" />
 
