--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
           content="Conan is an open source, decentralized and multi-platform package manager for C and C++ that allows you to create and share all your native binaries.">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <link rel="alternate" href="https://conan.io" hreflang="en"/>
-    <title>Conan, C and C++ Open Source Package Manager</title>
+    <title>Conan - C and C++ Open Source Package Manager</title>
     <link rel="canonical" href="https://conan.io"/>
 
     <!-- FONT -->
@@ -125,7 +125,7 @@
         <div class="row justify-content-center">
 
             <!-- ONE ADVANTAGE -->
-            <div class="col-lg-3 pb-3 pb-md-1 pb-lg-0">
+            <div class="col-lg-3 pb-3 pb-lg-0">
                 <div class="advantage text-center black text-center conan-card">
                     <h4 class="mt-3 text-left font-weight-bold">Conan is universal and portable.</h4>
                     <div class="advantage-text text-left pb-2">
@@ -142,7 +142,7 @@
             </div>
 
             <!-- ONE ADVANTAGE -->
-            <div class="col-lg-3  pb-3 pb-md-1 pb-lg-0">
+            <div class="col-lg-3 pb-3 pb-lg-0">
                 <div class="advantage text-center black text-center conan-card">
                     <h4 class="mt-3 text-left font-weight-bold">Conan is open source and completely free.</h4>
                     <div class="advantage-text text-left pb-2">
@@ -159,7 +159,7 @@
 
 
             <!-- ONE ADVANTAGE -->
-            <div class="col-lg-3  pb-3 pb-md-1 pb-lg-0">
+            <div class="col-lg-3 pb-3 pb-lg-0">
                 <div class="advantage text-center black text-center conan-card">
                     <h4 class="mt-3 text-left font-weight-bold">Conan can manage any number of different binaries.</h4>
                     <div class="advantage-text text-left pb-2">
@@ -404,7 +404,7 @@
                     <img class="" src="img/brands/company_30.png" alt="Arxan"/>
                 </div>
                 <div class="user-box d-flex justify-content-center align-content-center conan-card">
-                    <img class="" src="img/brands/company_31.png" alt="Plex"/>
+                    <img class="" src="img/brands/company_31.svg" alt="Plex"/>
                 </div>
             </div>
         </div>
@@ -413,13 +413,8 @@
 
 
 <!-- USERS VOICE -->
-<section class="testis py-5 users-voice-bg users-voices" id="testis">
+<section class="testis pb-5 users-voice-bg users-voices" id="testis">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h4 class="text-center mt-2 mb-4">OUR USERS' VOICE</h4>
-            </div>
-        </div>
         <div class="row">
             <div class="col-12">
                 <div class="testi-cartousel-wrapper">
@@ -452,7 +447,7 @@
                                     </div>
                                     <div class="name text-center">Maikel van den Hurk</div>
                                     <div class="position text-center font-weight-bold">
-                                        Principal Software Engineer, TomTom
+                                        Principal Software Engineer at TomTom
                                     </div>
                                 </div>
                             </div>
@@ -463,7 +458,7 @@
                                 <div class="col-12">
                                     <!-- COMPANY LOGO -->
                                     <div class="text-center company-logo">
-                                        <img src="img/our-users/github.svg" alt="TomTom" class="mx-auto">
+                                        <img src="img/social/github.svg" alt="GitHub" class="mx-auto">
                                     </div>
                                     <p class="text text-center mx-auto company-quote">
                                         Conan makes it easier for our many automotive GitHub Enterprise customers
@@ -488,7 +483,7 @@
                             <div class="inner">
                                 <!-- COMPANY LOGO -->
                                 <div class="text-center company-logo">
-                                    <img class="mx-auto" src="img/our-users/microblink.svg" alt="microblink">
+                                    <img class="mx-auto" src="img/logo/microblink.png" alt="microblink">
                                 </div>
                                 <!-- TEXT -->
                                 <p class="text text-center company-quote mx-auto">
@@ -519,7 +514,7 @@
                             <div class="inner">
                                 <!-- COMPANY LOGO -->
                                 <div class="text-center company-logo">
-                                    <img class="mx-auto" src="img/our-users/tanker.svg" alt="tanker">
+                                    <img class="mx-auto" src="img/brands/company_37.png" alt="tanker">
                                 </div>
                                 <!-- TEXT -->
                                 <p class="text text-center company-quote mx-auto">
@@ -649,7 +644,7 @@
 
                         <div class="testi">
                             <!-- COMPANY LOGO -->
-                            <div class="text-center pb-4">
+                            <div class="text-center company-logo">
                                 <img class="mx-auto" src="img/our-users/arxan.svg" alt="arxan">
                             </div>
                             <div class="inner">
@@ -674,8 +669,8 @@
 
                         <div class="testi">
                             <!-- COMPANY LOGO -->
-                            <div class="text-center pb-4">
-                                <img class="mx-auto" src="img/our-users/pix4d.svg" alt="pix4d">
+                            <div class="text-center company-logo">
+                                <img class="mx-auto" src="img/logo/pix4d.png" alt="pix4d">
                             </div>
                             <div class="inner">
                                 <!-- TEXT -->
@@ -737,33 +732,7 @@
                             <div class="inner">
                                 <!-- COMPANY LOGO -->
                                 <div class="text-center company-logo">
-                                    <img class="mx-auto" src="img/our-users/khomp.svg" alt="khomp">
-                                </div>
-                                <!-- TEXT -->
-                                <p class="text text-center company-quote mx-auto">
-                                    Conan is the best solution for external dependencies in
-                                    C and C++ projects. It linked C++ and DevOps by applying a
-                                    common language for building, packaging, and distributing
-                                    our artifacts to any platform and architecture.
-                                </p>
-                                <!-- QUOTE -->
-                                <div class="quote d-flex align-items-center justify-content-center my-3">
-                                    <span class="line"></span>
-                                    <img class="mx-2" src="img/white-quote.svg" alt="" class="quote-image"/>
-                                    <span class="line"></span>
-                                </div>
-                                <div class="name text-center">Uilian Ries</div>
-                                <div class="position text-center font-weight-bold">
-                                    C++ Software Developer at Khomp
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="testi">
-                            <div class="inner">
-                                <!-- COMPANY LOGO -->
-                                <div class="text-center company-logo">
-                                    <img class="mx-auto" src="img/our-users/imazen.svg" alt="imazen">
+                                    <img class="mx-auto" src="img/logo/imazen.png" alt="imazen">
                                 </div>
                                 <!-- TEXT -->
                                 <p class="text text-center company-quote mx-auto">
