--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -16,7 +16,7 @@
     />
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link rel="alternate" href="https://conan.io" hreflang="en" />
-    <title>Conan, C and C++ Open Source Package Manager</title>
+    <title>Conan - C and C++ Open Source Package Manager</title>
     <link rel="canonical" href="https://conan.io" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700&display=swap"
