Latest fixes for logos

--- a/src/index.html
+++ b/src/index.html
@@ -353,7 +353,7 @@
 
 
 <!-- OUR USERS -->
-<section class="users my-4 py-2 py-md-5" id="users">
+<section class="users my-4 pt-2 pt-md-5" id="users">
     <div class="container">
 
         <div class="users-image-stock d-none" id="usersStock">
@@ -457,7 +457,7 @@
                             <div class="inner row">
                                 <div class="col-12">
                                     <!-- COMPANY LOGO -->
-                                    <div class="text-center company-logo">
+                                    <div class="text-center company-logo logo-squared">
                                         <img src="img/social/github.svg" alt="GitHub" class="mx-auto">
                                     </div>
                                     <p class="text text-center mx-auto company-quote">
@@ -513,12 +513,12 @@
                         <div class="testi">
                             <div class="inner">
                                 <!-- COMPANY LOGO -->
-                                <div class="text-center company-logo">
+                                <div class="text-center company-logo logo-squared">
                                     <img class="mx-auto" src="img/brands/company_37.png" alt="tanker">
                                 </div>
                                 <!-- TEXT -->
                                 <p class="text text-center company-quote mx-auto">
-                                    I’ll simpley say that I was a total n00b in build system
+                                    I’ll simply say that I was a total n00b in build systems
                                     before, dreading to update dependencies. Conan made it
                                     easy and likeable, I’m now really interested in
                                     packaging... Weird for a C++ programmer!
