conan-2-out-now disabled

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 </section>
 
 
-<section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
+<!-- <section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
     <div class="container">
         <div class="row p-2 d-flex justify-content-around align-items-center">
             <div class="d-none d-md-inline">
@@ -116,7 +116,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- ADVANTAGES -->
 <section class="advantages py-0 pt-5" id="advantages">
