cci-v2 url updated

--- a/src/cci-v2.html
+++ b/src/cci-v2.html
@@ -11,7 +11,7 @@
    <title>Conan, C and C++ Open Source Package Manager</title>
    <link rel="canonical" href="https://conan.io"/>
    <head>
-      <meta http-equiv = "refresh" content = "0; URL=https://github.com/conan-io/conan-center-index/blob/master/docs/v2_migration.md" />
+      <meta http-equiv = "refresh" content = "0; URL=https://github.com/conan-io/conan-center-index/discussions/16196" />
    </head>
    <!-- Google Tag Manager -->
    <script>(function (w, d, s, l, i) {
