download docu links updated

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -92,12 +92,12 @@
                 <div class="left-downloads-spacer"></div>
                 <div class="text text-two">
                   <p class="text-break">Read more about Conan installation:</br><a class="text-break"
-                      href="https://docs.conan.io/en/latest/installation.html">https://docs.conan.io/en/latest/installation.html
+                      href="https://docs.conan.io/2/installation.html">https://docs.conan.io/2/installation.html
                     </a></p>
                 </div>
               </div>
               <div class="cta-wrapper"><a class="btn conan-blue-gradient-bg white font-weight-bold"
-                  href="https://docs.conan.io/en/latest/getting_started.html">Getting Started With Conan</a></div>
+                  href="https://docs.conan.io/2.0/tutorial.html">Getting Started With Conan</a></div>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
                   </div>
                 </div>
                 <div class="cta-wrapper"><a class="btn artifactory-green-gradient-bg"
-                    href="https://docs.conan.io/en/latest/uploading_packages/artifactory/artifactory_ce.html">Getting Started with
+                    href="https://docs.conan.io/2/tutorial/conan_repositories/setting_up_conan_remotes/artifactory/artifactory_ce_cpp.html">Getting Started with
                     Artifactory CE</a></div>
               </div>
             </div>
