--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
         </div>
         <img src="img/conan-single-cube.svg" class="d-none d-lg-block position-absolute" style="right: 0"/>
         <div class="row d-flex py-md-5 align-items-stretch justify-content-center">
-            <a href="https://docs.conan.io/en/2.0/introduction.html" class="learn-more-ce-link" id="learn_more_btn_middle">Learn more about Conan</a>
+            <a href="https://docs.conan.io/2/introduction.html" class="learn-more-ce-link" id="learn_more_btn_middle">Learn more about Conan</a>
         </div>
     </div>
 </section>
@@ -404,7 +404,7 @@
                     <img class="" src="img/brands/company_30.png" alt="Arxan"/>
                 </div>
                 <div class="user-box d-flex justify-content-center align-content-center conan-card">
-                    <img class="" src="img/brands/company_31.svg" alt="Plex"/>
+                    <img class="" src="img/brands/company_31.png" alt="Plex"/>
                 </div>
             </div>
         </div>
