Conan 2.0 Is Out Now enabled

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 </section>
 
 
-<!-- <section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
+<section id="conan-2-out-now" class="conan-blue-to-dark-gradient-bg py-3">
     <div class="container">
         <div class="row p-2 d-flex justify-content-around align-items-center">
             <div class="d-none d-md-inline">
@@ -97,7 +97,7 @@
             <div class="col-auto text-center text-white">
                 <h1>Conan 2.0 Is Out Now</h1>
                 <div class="d-inline">
-                    <a href="https://docs.conan.io/en/2.0/whatsnew.html" class="btn conan-blue-border bg-white font-weight-bold" id="whats_new_btn_middle">
+                    <a href="https://docs.conan.io/2/whatsnew.html" class="btn conan-blue-border bg-white font-weight-bold" id="whats_new_btn_middle">
                         <span>
                             What's new in 2.0
                         </span>
@@ -116,7 +116,7 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 <!-- ADVANTAGES -->
 <section class="advantages py-0 pt-5" id="advantages">
