--- a/src/downloads.html
+++ b/src/downloads.html
@@ -117,39 +117,14 @@
                 <div class="installers pb-4">
                   <div class="package-wrapper mb-0 d-flex flex-wrap align-items-center position-relative" id="artifactoryZipPackage">
 
-                    <div class="d-flex">
-                      <div class="cn-box cn-main" id="artiZipMain">Download tar.gz</div>
+                    <div class="package-wrapper d-flex flex-no-wrap">
+                      <div class="cn-box small"><img alt="Linux" class="lazy" data-src="img/downloads/artifactory-small-pack.png"></div>
+                      <div class="cn-box cn-main">Download tar.gz</div>
                       <a
                         class="cn-box cn-action cn-download" data-tech="zip"
                         href="https://releases.jfrog.io/artifactory/bintray-artifactory/org/artifactory/cpp/ce/jfrog-artifactory-cpp-ce/[RELEASE]/jfrog-artifactory-cpp-ce-[RELEASE]-linux.tar.gz">
                       </a>
                     </div>
-
-                    <span class="d-none mx-2 d-md-inline-block">or</span>
-
-                    <a
-                      href="https://jfrog.com/community/start-free/"
-                      class="ncta bg-green d-block mt-2 mt-md-0 fcv-cta position-relative"
-                      target="_blank" rel="noopener">
-                      <span class="w-100 h-100 d-flex align-items-center justify-content-center h-100">
-                        Free Cloud Version
-                      </span>
-
-                      <div
-                        data-toggle="tooltip"
-                        data-placement="top"
-                        title="Create a free JFrog Artifactory &#010;Cloud server to host your own &#010; private packages (Conan and &#010; multiple other types)"
-                        class="position-absolute info-circle">
-                        <svg
-                        width="18"
-                        height="18"
-                        viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="8.55371" cy="8.75" r="8" stroke="#3D3D3D"/>
-                        <path d="M7.59971 5.6065C7.59971 5.7885 7.72971 5.9055 7.91171 5.9055H9.01671C9.19871 5.9055 9.30271 5.8015 9.30271 5.6065V4.6185C9.30271 4.4365 9.21171 4.2935 9.01671 4.2935H7.91171C7.70371 4.2935 7.59971 4.4235 7.59971 4.6185V5.6065ZM7.69071 13.5625H9.19871V6.6595H7.69071V13.5625Z" fill="#3D3D3D"/>
-                        </svg>
-                      </div>
-
-                    </a>
 
                   </div>
                 </div>
