drop meaning less `nojs` switch
https://stackoverflow.com/questions/15320052/what-are-all-the-differences-between-src-and-data-src-attributes

just used this one terms and privacy policy to show the icons for social which can be used for extra processing but current there is none

Chrome assume's this is extra data process (which we dont have) and just populates the images

by using the `src` directly on all pages there's less processing

--- a/src/faq.html
+++ b/src/faq.html
@@ -222,7 +222,7 @@
   </section>
 
 
-  @@include('./templates/footer.html', {"noJS": false})
+  @@include('./templates/footer.html')
 
   <div id="openSourceSubscribeModal" class="modal px-2 fade" aria-hidden="true" aria-labelledby="modalSuccessTitleFH"
     role="dialog" tabindex="-1">
