--- a/src/index.html
+++ b/src/index.html
@@ -762,7 +762,7 @@
     </div>
 </section>
 
-@@include('./templates/footer.html', {"noJS": false})
+@@include('./templates/footer.html')
 
 <!-- JS -->
 <script src="js/all.js"></script>
