--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -524,7 +524,7 @@
       </div>
     </section>
     
-    @@include('./templates/footer.html', {"noJS": true})
+    @@include('./templates/footer.html')
 
   </body>
 </html>
