--- a/src/tribe.html
+++ b/src/tribe.html
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    @@include('./templates/footer.html', {"noJS": false})
+    @@include('./templates/footer.html')
 
     <!-- Modal -->
     <div class="modal fade" id="conanTribeMemberModal" tabindex="-1" role="dialog" aria-labelledby="conanTribeMemberModalTitle" aria-hidden="true">
