--- a/src/user-stories.html
+++ b/src/user-stories.html
@@ -45,7 +45,7 @@
 
 
 
-  @@include('./templates/footer.html', {"noJS": false})
+  @@include('./templates/footer.html')
 
   <div
     id="openSourceSubscribeModal"
