--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -211,7 +211,7 @@
       </div>
     </section>
     
-    @@include('./templates/footer.html', {"noJS": true})
+    @@include('./templates/footer.html')
 
   </body>
 </html>
