Re-add installers download

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -76,6 +76,29 @@
                       data-toggle="tooltip"></a>
                   </div>
                   <div class="package-wrapper d-flex flex-no-wrap">
+                    <div class="cn-box small"><img alt="Debian" class="lazy"
+                                                   data-src="img/downloads/debian-small-pack.svg"></div>
+                    <div class="cn-box cn-main">Ubuntu / Debian X64 Installer</div> <a
+                          class="cn-box cn-action cn-download" data-os="ubuntu"
+                          href="https://github.com/conan-io/conan/releases/latest/download/conan-ubuntu-64.deb"></a>
+                  </div>
+                  <div class="package-wrapper normal-dropdown d-flex flex-no-wrap">
+                    <div class="cn-box small"><img alt="Windows" class="lazy"
+                                                   data-src="img/downloads/windows-small-pack.png" style="width:30px;"></div>
+                    <div class="cn-box cn-main cn-dropdown">
+                      <div class="dropdown"> <button aria-expanded="false" aria-haspopup="true"
+                                                     class="btn dropdown-toggle" data-toggle="dropdown" id="dropdownMenuButton" type="button">
+                        Download x86_64 </button>
+                        <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item"
+                                                                                           data-href="https://github.com/conan-io/conan/releases/latest/download/conan-win-64.exe">Download x86_64
+                        </a><a class="dropdown-item"
+                               data-href="https://github.com/conan-io/conan/releases/latest/download/conan-win-32.exe">Download x86
+                        </a></div>
+                      </div>
+                    </div> <a class="cn-box cn-action cn-download" data-os="windows"
+                              href="https://github.com/conan-io/conan/releases/latest/download/conan-win-64.exe"></a>
+                  </div>
+                  <div class="package-wrapper d-flex flex-no-wrap">
                     <div class="cn-box small"><img alt="Arc Linux" class="lazy"
                         data-src="img/downloads/archlinux-small-pack.svg"></div>
                     <div class="cn-box cn-main copy-text">$ yay -S conan</div> <a class="cn-box cn-action cn-copy"
