--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="col-3">
-                <img src="img/jfrog-mascot.svg">
+                <img src="img/frog-mascot.svg">
             </div>
         </div>
     </div>
