--- a/src/faq.html
+++ b/src/faq.html
@@ -268,7 +268,7 @@
   <script src="js/all.js"></script>
   <script>
 
-    alert(document.getElementById("faq-seo-data").innerHTML)
+    JSON.parse(document.getElementById("faq-seo-data").innerHTML)
     const faqArray = [
       {
         q: `What is Conan?`,
