Make sure images have complete names
for better SEO results, not that anyone should be looking for these All images should have filename "conan-xxxx"

closes #47

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -84,7 +84,7 @@
                   </div>
                   <div class="package-wrapper normal-dropdown d-flex flex-no-wrap">
                     <div class="cn-box small"><img alt="Windows" class="lazy"
-                                                   data-src="img/downloads/windows-small-pack.png" style="width:30px;"></div>
+                                                   data-src="img/downloads/windows-small-pack.svg" style="width:30px;"></div>
                     <div class="cn-box cn-main cn-dropdown">
                       <div class="dropdown"> <button aria-expanded="false" aria-haspopup="true"
                                                      class="btn dropdown-toggle" data-toggle="dropdown" id="dropdownMenuButton" type="button">
@@ -130,7 +130,7 @@
             <div class="content px-2 px-md-4 py-2 p-md-4">
               <div class="small-title d-flex align-items-center"><img
                   alt="Downlod JFrog Artifactory Community Edition for C and C++" class="mr-2 lazy"
-                  src="img/arti-downloads-logo.svg" style="width:200px;"></div>
+                  src="img/jfrog-artifactory-ce-download-banner.svg" style="width:200px;"></div>
               <div class="text pb-1">
                 <p class="py-3 front-text">Download the latest version of JFrog Artifactory Community Edition to host
                   your own private packages on your own server - for free.</p>
@@ -141,7 +141,7 @@
                   <div class="package-wrapper mb-0 d-flex flex-wrap align-items-center position-relative" id="artifactoryZipPackage">
 
                     <div class="package-wrapper d-flex flex-no-wrap">
-                      <div class="cn-box small"><img alt="Linux" class="lazy" data-src="img/downloads/artifactory-small-pack.png"></div>
+                      <div class="cn-box small"><img alt="Linux" class="lazy" data-src="img/downloads/jfrog-artifactory-small-pack.png"></div>
                       <div class="cn-box cn-main">Download tar.gz</div>
                       <a
                         class="cn-box cn-action cn-download" data-tech="zip"
@@ -198,7 +198,7 @@
                   </div>
                   <div class="package-wrapper d-flex flex-no-wrap">
                     <div class="cn-box small"><img alt="Windows" class="lazy"
-                        data-src="img/downloads/windows-small-pack.png" style="width:30px;"></div>
+                        data-src="img/downloads/windows-small-pack.svg" style="width:30px;"></div>
                     <div class="cn-box cn-main">Windows Installer</div> <a class="cn-box cn-action cn-download"
                       data-tech="windows"
                       href="https://releases.jfrog.io/artifactory/bintray-artifactory/org/artifactory/cpp/ce/jfrog-artifactory-cpp-ce/[RELEASE]/jfrog-artifactory-cpp-ce-[RELEASE]-windows.zip"></a>
@@ -212,7 +212,7 @@
                   </div>
                   <div class="package-wrapper d-flex flex-no-wrap has-multiline-text">
                     <div class="cn-box small"><img alt="Arc Linux" class="lazy"
-                        data-src="img/downloads/docker-small-pack.png"></div> <a
+                        data-src="img/downloads/docker-small-pack.svg"></div> <a
                       class="cn-box cn-main copy-text show-full-command" data-toggle="tooltip"
                       title="docker run --name artifactory -d -p 8081:8081 -p 8082:8082 docker.bintray.io/jfrog/artifactory-cpp-ce:latest"><span
                         class="in-copy-text">$ docker run ... </span></a><a class="cn-box cn-action cn-copy-multiline"
