--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="col-3">
-                <img src="img/frog-mascot.svg">
+                <img src="img/conan-chibi-frog-mascot.svg">
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
     <div class="container">
         <div class="row p-2 d-flex justify-content-around align-items-center">
             <div class="d-none d-md-inline">
-                <img src="img/sparks_left.svg">
+                <img src="img/conan-2-sparks-left.svg">
             </div>
             <div class="col-auto text-center text-white">
                 <h1>Conan 2.0 Is Out Now</h1>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="d-none d-md-inline">
-                <img src="img/sparks_right.svg">
+                <img src="img/conan-2-sparks-right.svg">
             </div>
         </div>
     </div>
@@ -189,7 +189,7 @@
     <div class="container py-5">
         <div class="row d-flex justify-content-center pb-5">
             <div class="col-md-auto py-3 d-flex justify-content-center">
-                <img src="img/artifactory-logo.svg"/>
+                <img src="img/jfrog-artifactory-ce-logo.svg"/>
             </div>
             <div class="col-8 col-md-6 text-left diagram-wrapper">
                 <h4 class="font-weight-bold">
@@ -214,7 +214,7 @@
         </div>
         <div class="row d-flex justify-content-center mt-5">
             <div class="col-md-auto py-3 d-flex justify-content-center">
-                <img src="img/conancenter-logo.svg" />
+                <img src="img/conan-center-callout.svg" />
             </div>
             <div class="col-8 col-md-6 text-left diagram-wrapper">
                 <h4 class="font-weight-bold">
@@ -245,7 +245,7 @@
     <div class="container py-4">
         <div class="row d-inline d-lg-none">
             <div class="col-12 d-flex justify-content-center">
-                <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
+                <img src="img/conan-tribe-chibi-frog-banner.svg" alt="Meet The Tribe">
             </div>
         </div>
         <div class="row d-inline d-lg-none">
@@ -269,7 +269,7 @@
         </div>
         <div class="row d-flex justify-content-around">
             <div class="col-4 d-none d-lg-inline">
-                <img src="./img/tribe-banner.svg" alt="Meet The Tribe">
+                <img src="img/conan-tribe-chibi-frog-banner.svg" alt="Meet The Tribe">
             </div>
             <div class="col-5 d-none d-lg-inline">
                 <h2 class="text-uppercase text-center text-lg-left">Meet the CONAN 2.0&nbsp;TRIBE</h2>
